-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.15.1
-
None
-
b152f3ace844effa64c4f970106edec864cbb052 (qt-creator/qt-creator/5.0)
In C/C++ a \x escape sequence is "unbounded" (unlike other programming languages).
"\x123456" isn't "\x12" followed by "3456", it's the character 0x123456 (which likely is out of range).
This causes a bug with the UTF-8 quickfix:
const QString str = "à123";
Get quick fixed to
const QString str = "\xc3\xa0123";
Which is illegal/wrong.
It should be instead
const QString str = "\xc3\xa0""123";
For Gerrit Dashboard: QTCREATORBUG-26003 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
362260,3 | CppEditor: Do not produce invalid code when escaping string literals | 5.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |